fixed line spacing

--- a/style.css
+++ b/style.css
@@ -195,6 +195,6 @@ footer {
 @media only screen and (max-width: 600px) {
   .typewriter h1 {
     font-size: 1.5em;
-    letter-spacing: .13em;
+    letter-spacing: .10em;
   }
 } 
